--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,17 @@
-#map { height: 100vh; }
+#map {
+  height: 100vh;
+}
 body {
-    margin: 0px;
+  margin: 0px;
+}
+#imprint {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  background-color: aliceblue;
+  font-size: large;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  z-index: 4000;
 }
